Task #3330: Homepage featured tiles spacing fixes. Refactor hover states for all tiles: Case Study, Blog. Add transitions.

--- a/_assets/styles/scss/04-components/_tiles--blog.scss
+++ b/_assets/styles/scss/04-components/_tiles--blog.scss
@@ -52,6 +52,8 @@ parent: tiles
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+    z-index: 0;
 
     > div {
       height: 150px;
@@ -97,6 +99,8 @@ parent: tiles
 
   .tile--blog__hover {
     height: 300px;
+    margin: 1em;
+    width: calc(100% - 2em);
 
     // Set height of tile hover content equal to height of image * 2.
     @include grid-media($small-screen-up) {
